[package]
name = "grpc_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
serde = { version = "1.0.191", features = ["derive"] }
tonic = "0.10.2"
tonic-web = "0"

[build-dependencies]
tonic-build = "0.10.2"
